# neuromap

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: grid.fs  grid.vs  map.fs  map.vs
app/src/main/java/me/tartikov/neuromap/: Application.kt  AssetUtils.kt  CameraController.kt  CameraState.kt  EncodingSettings.kt  FpsMeasurer.kt  GLUtils.kt  GridSettings.kt  GridShader.kt  Log.kt  MainActivity.kt  MapRenderer.kt  MapShader.kt  MapView.kt  NetworkSettings.kt  Quad.kt  Rect.kt  RenderTarget.kt  TextureBuffer.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  map_view.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
tools/: CMakeLists.txt
tools/cmake/: cuda.cmake
tools/inference/: CMakeLists.txt  hf.cpp  hf.h  main.cpp
tools/tiles_to_image/: CMakeLists.txt
tools/tiles_to_image/src/: main.cpp
tools/trainer/: Accuracy.cu  Accuracy.h  CMakeLists.txt  CombinedTilesSampler.cu  CombinedTilesSampler.h  Common.h  DetailedTilesSampler.cu  DetailedTilesSampler.h  EmptyTilesSampler.cu  EmptyTilesSampler.h  HostMemory.h  Model.cu  Model.h  SoftmaxCrossEntropyLoss.h  ThreadSafeQueue.h  config.json  main.cu
